small modify on dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,6 @@ services:
     ports:
       - "51233:51233"
       - "51234:51234"
-    networks:
-      net1:
-        ipv4_address: 172.16.0.5
     environment:
       MYSQL_HOST: mysql
       MYSQL_PORT: 3306
@@ -22,9 +19,7 @@ services:
     depends_on:
       - mysql
       - redis
-    command: ["/VideoWeb/wait-for-it.sh", "mysql:3306", "--", "/VideoWeb/wait-for-it.sh", "redis:6379", "--", "./main"]
-
-
+    command: ["./wait-for-it.sh", "mysql:3306", "--", "/VideoWeb/wait-for-it.sh", "redis:6379", "--", "./main"]
   mysql:
     image: mysql
     restart: always
@@ -37,9 +32,6 @@ services:
       - /mnt/Docker/mysql:/var/lib/mysql
     ports:
       - "3307:3306"
-    networks:
-      net1:
-        ipv4_address: 172.16.0.6
   redis:
     image: redis
     restart: always
@@ -49,11 +41,5 @@ services:
       - "6380:6379"
     environment:
       TZ: Asia/Shanghai
-    networks:
-      net1:
-        ipv4_address: 172.16.0.7
-networks:
-  net1:
-    ipam:
-      config:
-        - subnet: 172.16.0.0/16
+#  ffmpeg:
+#    image: jrottenberg/ffmpeg:centos
