small modify on sending message

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -4,14 +4,14 @@ database:
     password: 213103
 #    host: "1.95.54.11"
 #    port: 3307
-    host: "mysql"
+    host: "127.0.0.1"
     port: 3306
     database: VideoWeb
     charset: utf8mb4
   redis:
 #    host: "1.95.54.11"
 #    port: 6380
-    host: "redis"
+    host: "127.0.0.1"
     port: 6379
     password: ""
     database: 0
