--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,34 +10,58 @@ services:
       - "51233:51233"
       - "51234:51234"
     environment:
-      MYSQL_HOST: mysql
-      MYSQL_PORT: 3306
-      MYSQL_DB: VideoWeb
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      TZ: Asia/Shanghai
+      - MYSQL_HOST: mysql
+      - MYSQL_PORT: 3306
+      - MYSQL_DB: VideoWeb
+      - REDIS_HOST: redis
+      - REDIS_PORT: 6379
+      - MONGO_HOST: mongo
+      - MONGO_PORT: 27017
+      - TZ: Asia/Shanghai
     depends_on:
       - mysql
       - redis
-    command: ["./wait-for-it.sh", "mysql:3306", "--", "/VideoWeb/wait-for-it.sh", "redis:6379", "--", "./main"]
+      - mongo
+    command: ["./wait-for-it.sh", "mysql:3306", "--", "./wait-for-it.sh", "redis:6379", "--","./wait-for-it.sh","mongo:27017","--","./main"]
   mysql:
     image: mysql
+    container_name: "mysql"
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: 213103
-      MYSQL_DATABASE: VideoWeb
-      MYSQL_PASSWORD: 213103
-      TZ: Asia/Shanghai
+      - MYSQL_ROOT_PASSWORD: 213103
+      - MYSQL_DATABASE: VideoWeb
+      - MYSQL_PASSWORD: 213103
+      - TZ: Asia/Shanghai
     volumes:
       - /mnt/Docker/mysql:/var/lib/mysql
+      - /mnt/Docker/mysql/conf.d:/etc/mysql/conf.d
     ports:
       - "3307:3306"
   redis:
     image: redis
+    container_name: "redis"
     restart: always
     volumes:
-      - /mnt/Docker/redis:/data
+      - /mnt/Docker/redis/data:/data
+      - /mnt/Docker/redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
+      - /mnt/Docker/redis/logs:/var/log/redis
+    environment:
+      - TZ: Asia/Shanghai
     ports:
       - "6380:6379"
+
+  mongo:
+    image: mongo
+    container_name: "mongo"
+    restart: always
+    volumes:
+      - /mnt/Docker/mongo:/data/db
+      - /mnt/Docker/mongo/config:/data/configdb
+      - /mnt/Docker/mongo/logs:/data/logs
     environment:
-      TZ: Asia/Shanghai
+      - TZ: Asia/Shanghai
+      - MONGO_INITDB_DATABASE: VideoWeb
+      - MONGO_INITDB_ROOT_USERNAME: root
+      - MONGO_INITDB_ROOT_PASSWORD: 213103
+    ports:
+      - "27018:27017"
